--- a/assets/styles/layout.css
+++ b/assets/styles/layout.css
@@ -742,7 +742,7 @@ img, object, embed {
 	max-width: 100%;
 }
 
-@charset "UTF-8";
+/* @charset "UTF-8"; */
 /*START normalize.css*/
 /*! normalize.css v7.0.0 | MIT License | github.com/necolas/normalize.css */
 
