--- a/assets/styles/layout.css
+++ b/assets/styles/layout.css
@@ -1,7 +1,5 @@
-/* @import url('_normalize.css');
-@import url('_grid.css'); */
-
-@charset "UTF-8";
+@import url('_normalize.css');
+@import url('_grid.css');
 
 body {
   background-color: #313638;
