--- a/assets/styles/layout.css
+++ b/assets/styles/layout.css
@@ -1,5 +1,5 @@
-@import '_normalize.css';
-@import '_grid.css';
+/* @import '_normalize.css';
+@import '_grid.css'; */
 
 body {
   background-color: #313638;
