--- a/assets/styles/layout.css
+++ b/assets/styles/layout.css
@@ -190,6 +190,7 @@ a.navlink:hover {
   margin:0 auto;
   padding:100px 20px 85px 20px;
   text-align:justify;
+  min-height: 100vh;
 }
 
 div.skillsTrioWrap div.skillsTrioIMG {
